--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <script src="p5.js"></script>
-        <link rel="stylesheet" href="styles.css"/>
-        <script src="raycast.js"></script>
-    </head>
-    <body>
-    </body>
+<head>
+    <script src="p5.js"></script>
+    <script src="index.js"></script>
+</head>
+<body>
+    <label>Tile size</label>
+    <input id="tileSize" type="number" value="32"/> 
+    <label>Rows qnt</label>
+    <input id="rowsQnt" type="number" value="11"/> 
+    <label>Cols qnt</label>
+    <input id="colsQnt" type="number" value="15"/> 
+
+    <button id="generateButton">Go to preview</button>
+</body>
 </html>
