use localStorage to share grid

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="p5.js"></script>
+    <script src="consts.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
@@ -12,6 +13,6 @@
     <label>Cols qnt</label>
     <input id="colsQnt" type="number" value="15"/> 
 
-    <button id="generateButton">Go to preview</button>
+    <a href="preview.html">Go to preview</a>
 </body>
 </html>
