--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
 <head>
     <script src="p5.js"></script>
+    <link rel="stylesheet" href="editor.css"/>
     <script src="consts.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
-    <label>Tile size</label>
-    <input id="tileSize" type="number" value="32"/> 
-    <label>Rows qnt</label>
-    <input id="rowsQnt" type="number" value="11"/> 
-    <label>Cols qnt</label>
-    <input id="colsQnt" type="number" value="15"/> 
+    <div>
+        <label>Tile size</label>
+        <input id="tileSize" type="number" value="32"/> 
+        <label>Rows qnt</label>
+        <input id="rowsQnt" type="number" value="11"/> 
+        <label>Cols qnt</label>
+        <input id="colsQnt" type="number" value="15"/> 
 
-    <a href="preview.html">Go to preview</a>
+        <a href="preview.html">Go to preview</a>
+    </div>
 </body>
 </html>
